# OutlawsX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
GLUTesselator/: CMakeLists.txt
LabFuse/: CMakeLists.txt  README.md  main.cpp
OutlawsHelper/: CMakeLists.txt  helper_main.cpp
OutlawsHlpFiles/: Conman.hlp  Lmtutor.hlp  README.md
OutlawsHlpFiles/Df_specs_Converted/: DF_SPECS.hhk  Df_specs.chm  Df_specs.chw  Df_specs.hhp  df_specs.hhc
OutlawsHlpFiles/Df_specs_Converted/html/: df_s001a.htm  df_s09v9.htm  df_s0ctx.htm  df_s0cty.htm  df_s0g52.htm  df_s0gfr.htm  df_s0iau.htm  df_s0iav.htm  df_s0iaw.htm  df_s0k6v.htm  df_s0l9s.htm  df_s0mwm.htm  df_s0nar.htm  df_s0nca.htm  df_s0o6f.htm  df_s0pgu.htm  df_s0ptc.htm  df_s0upa.htm  df_s0ylu.htm  df_s0zmz.htm  df_s10nz.htm  df_s13lh.htm  df_s13li.htm  df_s14bs.htm  df_s14bt.htm  df_s15m0.htm  df_s1603.htm  df_s16wh.htm  df_s173n.htm  df_s17sg.htm  df_s1811.htm  df_s19fd.htm  df_s1hwq.htm  df_s1jzk.htm  df_s1kc6.htm  df_s1kdt.htm  df_s1m0m.htm  df_s1njp.htm  df_s1o54.htm  df_s1ofl.htm  (+146 more)
OutlawsLabLib/: CMakeLists.txt  FileSerializer.h  Lab.cpp  Lab.h
OutlawsLib/: Atx.cpp  Atx.h  CMakeLists.txt  Inf.cpp  Inf.h  LevelRuntime.cpp  LevelRuntime.h  Lvb.cpp  Lvb.h  Lvt.cpp  Lvt.h  NatvisFile.natvis  RuntimeLevel.cpp  RuntimeLevel.h  TexInfos.cpp  TexInfos.h  file_utilities.cpp  geometry.cpp  geometry.h
OutlawsLib/antlr/: AtxInput.txt  AtxLexer.g4  AtxParser.g4  InfInput.txt  InfLexer.g4  InfParser.g4  LvtLexer.g4  LvtParser.g4  input.txt  lvt.g
OutlawsPlugin/: CMakeLists.txt  plugin.cpp
OutlawsXUnity/: .gitignore
OutlawsXUnity/Assets/: Mover.cs
OutlawsXUnity/Assets/Scenes/: SampleScene.unity
OutlawsXUnity/Assets/Scripts/: FreeCStrMarshaler.cs  GameHandler.cs  Mover.cs  Native.cs  Sector.cs
OutlawsXUnity/Assets/Textures/: OlTexMaterial.mat  OlTexMaterialSimp.mat  OlTexShader.shader  OlTexShaderSimp.shader  pack.json
OutlawsXUnity/ProjectSettings/: InputManager.asset  ProjectSettings.asset
Textures/: batch-convert.bat  oltex.md  oltex.tps
Textures/oltex/: keep-this-dir.txt
cmake/: ExternalAntlr4Cpp.cmake
